# github_mmwave_competition

2025/KKT_Module/: README.md  pyproject.toml
2025/KKT_Module/KKT_Module/: Configs.py  KKTModuleLogger.py  __init__.py  ksoc_global.py
2025/KKT_Module/KKT_Module/DataReceive/: ReceiverLog.py  Results.py  __init__.py
2025/KKT_Module/KKT_Module/DataReceive/Core/: Objects.py  ReceiverConfigs.py  __init__.py
2025/KKT_Module/KKT_Module/DataReceive/Data/: CFAR.py  DiagnosisDict.py  Exponential.py  FeatureMap.py  Gesture.py  Motion.py  RawData.py  ReferenceBank.py  Tracking.py  (+1 more)
2025/KKT_Module/KKT_Module/FiniteReceiverMachine/: FiniteReceiveMachine.py  __init__.py
2025/KKT_Module/KKT_Module/GuiUpdater/: GuiUpdater.py  __init__.py
2025/KKT_Module/KKT_Module/KKTUtility/: DigiControl.py  GestureObserver.py  OBSControl.py  PhaseCompensate.py  RFControl.py  ReadBBuffer.py  UserLicence.py
2025/KKT_Module/KKT_Module/SettingProcess/: PhaseCalibration.py  ScriptSetting.py  SettingConfig.py  SettingProccess.py  SettingProccess2.py  Utilitys.py  __init__.py  sic_func.py
2025/KKT_Module/doc/phase_compensate/: SettingProcess.md
2025/KKT_Module/examples/: GuiUpdater.py  SettingProc.py  SettingProc_UI.py
2025/KKT_Module/test/: test_FRM.py
2025/ui/: pyproject.toml
2025/ui/KKT_UI/KKTGraph/: ShowADCRaw.py  ShowCurrentPlot.py  ShowFFT.py  ShowFeatureMap.py  ShowGesInference.py  ShowGesture.py  ShowResultMainWin.py  ShowResults.py  ShowRetention.py  ShowTracking.py
2025/ui/KKT_UI/QTWidget/: MainWindows.py  MessageBox.py  Utility.py  qt_obj.py
2025/ui/example/: main.py
(+503 files in other folders)
