[tool.poetry]
name = "kkt-module"
version = "3.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kkt_module"}]

[tool.poetry.dependencies]
python = ">=3.8.9,<3.11"
h5py = ">=3.5.0"
openpyxl = "^3.1.2"
playsound = "1.2.2"
numpy = ">=1.24.1"
rsa = "^4.9"
pyside2 = "^5.15.2.1"
scikit-image = ">=0.19.2"
opencv-python = "4.5.3.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
