[tool.poetry]
name = "KKT_UI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.9,<3.11"
pyqtgraph = "^0.13.3"
pyside2 = "^5.15.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
